--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'application'
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 mainClassName = 'me.mcofficer.james.James'
@@ -9,23 +8,29 @@ mainClassName = 'me.mcofficer.james.James'
 version = '2.0-SNAPSHOT'
 
 repositories {
-    mavenCentral()
     jcenter()
+    mavenCentral()
     maven {
         url 'https://m2.dv8tion.net/releases'
         name 'm2-dv8tion'
+    }
+    mavenCentral {
+        url 'https://repo1.maven.org/maven2'
+        name 'mvn'
     }
     maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     implementation 'net.dv8tion:JDA:4.2.0_172'
-    implementation 'com.jagrosh:jda-utilities:3.0.4'
-    implementation 'com.github.walkyst:lavaplayer-fork:1.3.97'
-    implementation 'com.github.EndlessSkyCommunity:ESParser-java:97ebcf9553'
+    implementation 'com.jagrosh:jda-utilities:3.0.5'
     implementation 'com.github.mpkorstanje:simmetrics-core:4.1.1'
 
     implementation 'ch.qos.logback:logback-classic:1.2.10'
+}
+
+sourceSets {
+    main.java.srcDirs = ['src/main/java', 'esparser/src/main/java/']
 }
 
 compileJava.options.encoding = 'UTF-8'
