--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ version = '2.0-SNAPSHOT'
 
 repositories {
     jcenter()
+    mavenLocal()
     mavenCentral()
     maven {
         url 'https://m2.dv8tion.net/releases'
@@ -25,7 +26,7 @@ dependencies {
     implementation 'net.dv8tion:JDA:4.4.1_353'
     implementation 'com.jagrosh:jda-utilities:3.0.5'
     implementation 'com.github.mpkorstanje:simmetrics-core:4.1.1'
-
+    implementation 'com.twelvemonkeys.imageio:imageio-webp:3.10.1'
     implementation 'ch.qos.logback:logback-classic:1.2.10'
 }
 
